# SynologyC2Password-to-Bitwarden

./: .gitignore  LICENSE  README.md  pyproject.toml  syno2bw.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
