[project]
name = "SynologyC2Password-to-Bitwarden"
description = "A tool to convert Synology C2 Password export files to Bitwarden import format."
version = "1.3.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "ruff>=0.15.18",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

preview = true

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "RUF"]
ignore = ["E501", "UP015", "E712"]
extend-select = ["TID252"]
